Populate isNew, isFinal & servedData fields for orders & sonar fixes